Launcher commit-1